# SoA-for-CMS

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
include/: PortableCollection.h  PortableDeviceCollection.h  PortableHostCollection.h  SoACommon.h  SoALayout.h
tests/: CudaSoA.cu  SoA.cc  SoAMethods.cc  SoATest.cc  SoAUnitTests.cc  TestPortableHostCollection.cc  TestPortableMultiCollection.cc  TestSoA.cc
